2.8.9
staffs now cost mana too but less energy
2.8.8
staffs now work like bows
projectiles now no longer randomly miss as they work like arrows
buffed homing
could be buggy
2.8.7
fixed items generating with 3 secondary stats
2.8.6
should fix the server crash on profession gui
buffed wisdom ele resist bonus
buffed armor values and made the difference between plate, leather and cloth less
fixed armor scaling
increased stat requirements by a bit
made it easier to get armor and ele resist %
slimes now give less exp
2.8.5
updated the modified neat integration to have configs, they are in mmorpg-client file.
wisdom now gives less regens but also gives elemental resists
stamina now gives bit of ene regen too
2.8.4 
fixed another server crash
2.8.3
fix another server crash
added chinese and taiwanese lang translations by yt0535 
2.8.2
fixed server side crash
increased jewerly durability max values
2.8.1
fixed picked stats capability and professions cap not saving over death
fixed no command found error on lvl up
2.8.0

Added stats on lvl up! These stats are now much more important as gear has requirements for them.

Added armor types! Cloth, Leather, Plate! 

* cloth needs int, wis, leather needs dex, sta, plate needs vit str
* normal items randomly get either 1 stat as requirement, or both at half the value
* unique items have unique requirements :thonK: 
* higher gear rarities have higher stat requirements
* to reset your allocated stat points you need alchemy to craft a regret potion
* at early lvls requirements will be 0 but at lvl 10 or so they will slowly start and increase till max lvl.
* core stats (vit, dex etc) will become much more important in gearing and you should probably focus on getting those on your gear to fulfil the requirements

The way stat requirements on gear work is:
- your stats are calculated even if you don't current meet the stat requirement