@@ -1,9 +1,12 @@
 package com.robertx22.mine_and_slash.items.gearitems.weapon_mechanics;
 
+import com.robertx22.mine_and_slash.database.stats.stat_types.offense.PhysicalDamage;
 import com.robertx22.mine_and_slash.items.gearitems.bases.WeaponMechanic;
 import com.robertx22.mine_and_slash.uncommon.capability.EntityCap;
 import com.robertx22.mine_and_slash.uncommon.capability.EntityCap.UnitData;
 import com.robertx22.mine_and_slash.uncommon.datasaving.Load;
+import com.robertx22.mine_and_slash.uncommon.effectdatas.DamageEffect;
+import com.robertx22.mine_and_slash.uncommon.effectdatas.EffectData;
 import com.robertx22.mine_and_slash.uncommon.effectdatas.interfaces.WeaponTypes;
 import com.robertx22.mine_and_slash.uncommon.enumclasses.Elements;
 import com.robertx22.mine_and_slash.uncommon.localization.Styles;
@@ -15,6 +18,7 @@ import net.minecraft.util.text.StringTextComponent;
 import net.minecraftforge.event.entity.living.LivingHurtEvent;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class WandWeaponMechanic extends WeaponMechanic {
 
@@ -25,7 +29,7 @@ public class WandWeaponMechanic extends WeaponMechanic {
 
     @Override
     public float GetEnergyCost() {
-        return 1;
+        return 2;
     }
 
     @Override
@@ -42,21 +46,36 @@ public class WandWeaponMechanic extends WeaponMechanic {
     public boolean Attack(LivingHurtEvent event, LivingEntity source, LivingEntity target,
                           UnitData unitsource, UnitData targetUnit) {
 
-        double RANGE = 4;
+        double RANGE = 3;
 
-        List<LivingEntity> entities = Utilities.getEntitiesWithinRadius(RANGE, target, LivingEntity.class);
+        List<LivingEntity> entities = Utilities.getEntitiesWithinRadius(RANGE, target, LivingEntity.class)
+                .stream()
+                .filter(x -> x.equals(source) == false && x.equals(target) == false)
+                .collect(Collectors.toList());
 
-        if (entities.size() == 1) {
+        if (entities.size() == 0) {
 
-        } else if (entities.size() > 1) {
-            unitsource.consumeMana(this.GetManaCost());
-            unitsource.consumeEnergy(this.GetEnergyCost());
+        } else if (entities.size() > 0) {
+            float costMulti = 1 + entities.size() * 0.3F;
+
+            unitsource.consumeMana(this.GetManaCost() * costMulti);
+            unitsource.consumeEnergy(this.GetEnergyCost() * costMulti);
             ElementalParticleUtils.SpawnNovaParticle(Elements.Physical, target, RANGE, 200);
         }
 
+        int val = (int) unitsource.getUnit().getStat(PhysicalDamage.GUID).Value;
+        DamageEffect dmg1 = new DamageEffect(event, source, target, val, unitsource, targetUnit, EffectData.EffectTypes.BASIC_ATTACK, weaponType());
+        dmg1.setMultiplier(1);
+        dmg1.Activate();
+
         for (LivingEntity entity : entities) {
             EntityCap.UnitData targetdata = Load.Unit(entity);
-            super.multiplyDamage(event, source, target, unitsource, targetdata, 1);
+
+            int num = (int) unitsource.getUnit().getStat(PhysicalDamage.GUID).Value;
+            DamageEffect dmg = new DamageEffect(null, source, entity, num, unitsource, targetdata, EffectData.EffectTypes.SPELL, weaponType());
+            dmg.setMultiplier(1);
+            dmg.Activate();
+
         }
 
         return true;
