@@ -1,5 +1,7 @@
 2.8.9
+added wands! (thanks tom for the textures!)
 staffs now cost mana too but less energy
+fixed bomb and explosion spells. woops.
 2.8.8
 staffs now work like bows
 projectiles now no longer randomly miss as they work like arrows
